--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-hyper text markup language
-name is yash
-name: yaswanth
-DOB : 26-08-2001
-higher degree: B tech
+hyper text markup language</br?
+  name is yash</br>
+  name: yaswanth</br>
+DOB : 26-08-2001</br>
+higher degree: B tech</br>
 </html>
